feature rest service add insertRecords
